--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<title>비밀번호 확인</title>
+<title>비밀번호</title>
 </head>
 <body style="text-align:center; margin-top:100px; font-family:Arial; background:#d8b4f8; color:#333;">
 
