--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>병원 대기 시스템</title>
+<title>병원 접수 시스템</title>
 <style>
 body {
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
     background: linear-gradient(135deg, #d9c2ff, #b388ff);
     color: #3a0066;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+}
+.heart-btn {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    font-size: 26px;
+    cursor: pointer;
 }
 .container {
+    width: 450px;
+    margin: 100px auto;
     background: #f3e8ff;
-    width: 420px;
     padding: 25px;
     border-radius: 20px;
     box-shadow: 0 10px 30px rgba(0,0,0,0.2);
@@ -29,7 +33,6 @@ input {
     border-radius: 10px;
     border: none;
     margin-bottom: 10px;
-    font-size: 16px;
 }
 button {
     padding: 10px 15px;
@@ -43,7 +46,6 @@ button {
 }
 button:disabled {
     background: #cbb3ff;
-    cursor: not-allowed;
 }
 .current {
     font-size: 22px;
@@ -57,98 +59,86 @@ button:disabled {
     max-height: 150px;
     overflow-y: auto;
 }
-.ticket {
+.login-box {
+    display: none;
     margin-top: 10px;
-    font-weight: bold;
-}
-.admin-box {
-    margin-top: 15px;
-    padding-top: 10px;
-    border-top: 2px dashed #b388ff;
 }
 </style>
 </head>
 <body>
 
+<div class="heart-btn" onclick="toggleLogin()">💜</div>
+
 <div class="container">
-    <h1>💜 병원 대기 시스템</h1>
+    <h1>병원 접수 시스템</h1>
 
-    <input type="text" id="nameInput" placeholder="이름 입력" />
-    <button onclick="register()">접수하기</button>
-    <div class="ticket" id="ticket"></div>
-
-    <div class="current">현재 진료 중: <span id="currentNumber">없음</span></div>
-    <div class="queue" id="queueList"></div>
-
-    <div class="admin-box">
-        <input type="password" id="adminPass" placeholder="관리자 비밀번호" />
-        <button onclick="adminLogin()">관리자 로그인</button>
-        <br>
-        <button id="nextBtn" onclick="nextPatient()" disabled>다음 환자 ▶</button>
+    <div class="login-box" id="loginBox">
+        <input type="password" id="adminPass" placeholder="관리자 비밀번호">
+        <button onclick="adminLogin()">로그인</button>
     </div>
+
+    <div id="adminPanel" style="display:none;">
+        <input type="text" id="nameInput" placeholder="환자 이름 입력">
+        <button onclick="register()">접수하기</button>
+        <button onclick="nextPatient()">다음 환자 호출 ▶</button>
+    </div>
+
+    <div class="current">현재 진료 중: <span id="currentName">없음</span></div>
+    <div class="queue" id="queueList"></div>
 </div>
 
 <script>
 const ADMIN_PASSWORD = "9999";
-let isAdmin = false;
-
 let queue = JSON.parse(localStorage.getItem("hospitalQueue")) || [];
 let current = localStorage.getItem("currentPatient") || "없음";
-let lastNumber = parseInt(localStorage.getItem("lastNumber")) || 0;
 
 function saveData() {
     localStorage.setItem("hospitalQueue", JSON.stringify(queue));
     localStorage.setItem("currentPatient", current);
-    localStorage.setItem("lastNumber", lastNumber);
 }
 
-function register() {
-    const name = document.getElementById("nameInput").value.trim();
-    if (!name) return alert("이름 입력해주세요!");
-
-    lastNumber++;
-    const patient = { number: lastNumber, name };
-    queue.push(patient);
-
-    document.getElementById("ticket").innerText =
-        `${name}님 대기번호: ${lastNumber}`;
-
-    document.getElementById("nameInput").value = "";
-    saveData();
-    render();
+function toggleLogin() {
+    const box = document.getElementById("loginBox");
+    box.style.display = box.style.display === "none" ? "block" : "none";
 }
 
 function adminLogin() {
     const pass = document.getElementById("adminPass").value;
     if (pass === ADMIN_PASSWORD) {
-        isAdmin = true;
-        document.getElementById("nextBtn").disabled = false;
-        alert("관리자 모드 활성화");
+        document.getElementById("adminPanel").style.display = "block";
+        alert("관리자 로그인 성공");
     } else {
         alert("비밀번호 틀림");
     }
 }
 
-function nextPatient() {
-    if (!isAdmin) return;
+function register() {
+    const name = document.getElementById("nameInput").value.trim();
+    if (!name) return alert("이름 입력");
 
+    queue.push(name);
+    document.getElementById("nameInput").value = "";
+    saveData();
+    render();
+}
+
+function nextPatient() {
     if (queue.length === 0) {
         current = "없음";
     } else {
-        const next = queue.shift();
-        current = next.number;
+        current = queue.shift();
     }
     saveData();
     render();
 }
 
 function render() {
-    document.getElementById("currentNumber").innerText = current;
+    document.getElementById("currentName").innerText = current;
     const list = document.getElementById("queueList");
     list.innerHTML = "";
-    queue.forEach(p => {
+    queue.forEach(name => {
         const div = document.createElement("div");
-        div.innerText = `대기 ${p.number}번 - ${p.name}`;
+        div.innerText = name;
         list.appendChild(div);
     });
 }
