--- a/index.html
+++ b/index.html
@@ -2,41 +2,110 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<title>비밀번호 확인</title>
-</head>
-<body style="text-align:center; margin-top:100px; font-family:Arial; background:#d8b4f8; color:#333;">
+<title>미로 찾기 게임</title>
+<style>
+body {
+    background: #e9d5ff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: Arial;
+}
+h1 { margin-top: 20px; }
 
-<h2>비밀번호 입력</h2>
-<input type="password" id="pw" style="padding:10px; border-radius:5px; border:none;">
-<button onclick="checkPw()" style="padding:10px 20px; border:none; border-radius:5px; background:white; color:#8b5cf6; font-weight:bold;">확인</button>
-
-<p id="result" style="font-weight:bold; margin-top:20px;"></p>
-
-<script>
-function checkPw() {
-    const password = document.getElementById("pw").value;
-    const result = document.getElementById("result");
-
-    if (password === "56745634") {
-        result.innerText = "✅ 통과!";
-        result.style.color = "green";
-    } else {
-        result.innerText = "❌ 비밀번호 틀림";
-        result.style.color = "red";
-    }
-
-    // 3초 뒤 메시지 지우기
-    setTimeout(() => {
-        result.innerText = "";
-    }, 3000);
+#maze {
+    display: grid;
+    grid-template-columns: repeat(15, 30px);
+    gap: 2px;
+    margin-top: 20px;
 }
 
-// 엔터 키로 실행
-document.getElementById("pw").addEventListener("keydown", function(e) {
-    if (e.key === "Enter") {
-        checkPw();
+.cell {
+    width: 30px;
+    height: 30px;
+}
+
+.wall { background: #4c1d95; }
+.path { background: white; }
+.player { background: #22d3ee; }
+.goal { background: #22c55e; }
+
+#msg {
+    margin-top: 20px;
+    font-weight: bold;
+}
+</style>
+</head>
+<body>
+
+<h1>🧩 미로 찾기</h1>
+<div id="maze"></div>
+<div id="msg"></div>
+
+<script>
+const mazeData = [
+"111111111111111",
+"100000000000001",
+"101111011111101",
+"101000010000101",
+"101011110111101",
+"101010000100001",
+"101010111101101",
+"100010100001001",
+"111110101111101",
+"100000100000001",
+"101111101111101",
+"100000001000001",
+"101111111011101",
+"100000000010001",
+"111111111111111"
+];
+
+const maze = document.getElementById("maze");
+let playerPos = { x: 1, y: 1 };
+const goalPos = { x: 13, y: 13 };
+
+function drawMaze() {
+    maze.innerHTML = "";
+    mazeData.forEach((row, y) => {
+        row.split("").forEach((cell, x) => {
+            const div = document.createElement("div");
+            div.classList.add("cell");
+            if (cell === "1") div.classList.add("wall");
+            else div.classList.add("path");
+
+            if (x === playerPos.x && y === playerPos.y) div.classList.add("player");
+            if (x === goalPos.x && y === goalPos.y) div.classList.add("goal");
+
+            maze.appendChild(div);
+        });
+    });
+}
+
+function move(dx, dy) {
+    const newX = playerPos.x + dx;
+    const newY = playerPos.y + dy;
+
+    if (mazeData[newY][newX] === "0") {
+        playerPos.x = newX;
+        playerPos.y = newY;
     }
+
+    if (newX === goalPos.x && newY === goalPos.y) {
+        document.getElementById("msg").innerText = "🎉 도착 성공!";
+    }
+
+    drawMaze();
+}
+
+document.addEventListener("keydown", e => {
+    if (e.key === "ArrowUp") move(0, -1);
+    if (e.key === "ArrowDown") move(0, 1);
+    if (e.key === "ArrowLeft") move(-1, 0);
+    if (e.key === "ArrowRight") move(1, 0);
 });
+
+drawMaze();
 </script>
 
 </body>
