--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div id="result"></div>
 
 <script>
-const passCodes = ["PASS001", "PASS002", "VIP777"];
+const passCodes = ["0000000001", "0000000002", "0000000003", "0000000004", "0000000005", "0000000006"];
 let scanner;
 
 function startScanner() {
